--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -2,12 +2,13 @@
 #
 # Table name: posts
 #
-#  id          :integer          not null, primary key
-#  title       :string
-#  description :text
-#  user_id     :integer
-#  created_at  :datetime         not null
-#  updated_at  :datetime         not null
+#  id           :integer          not null, primary key
+#  title        :string
+#  description  :text
+#  user_id      :integer
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#  total_rubies :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
