--- a/test/fixtures/minerals.yml
+++ b/test/fixtures/minerals.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: minerals
+#
+#  id                    :integer          not null, primary key
+#  minerals_cart_id      :integer
+#  rubies_inside_mineral :integer
+#  title                 :string           default("")
+#  created_at            :datetime         not null
+#  updated_at            :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined. If you add columns to the
